--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
   },
   "devDependencies": {
     "@koishijs/client": "^5.17.1",
-    "@koishijs/console": "^5.17.1",
     "@koishijs/eslint-config": "^1.0.4",
+    "@koishijs/plugin-console": "^5.17.1",
     "@types/node": "^20.4.2",
     "@types/throttle-debounce": "^2.1.0",
     "esbuild": "^0.18.14",
@@ -57,6 +57,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@koishijs/console": "^5.17.1",
     "chokidar": "^3.5.3",
     "throttle-debounce": "^3.0.1"
   }
