--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "Shigma <shigma10826@gmail.com>",
   "scripts": {
     "build": "tsc -b && koishi-console build",
-    "lint": "eslint ."
+    "lint": "eslint . --ext .ts,.vue"
   },
   "license": "MIT",
   "repository": {
