--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,18 @@
     "rootDir": "src",
     "outDir": "lib",
     "target": "es2022",
-    "module": "commonjs",
+    "module": "ESNext",
     "declaration": true,
     "composite": true,
     "incremental": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "moduleResolution": "node",
+    "moduleResolution": "Bundler",
     "strictBindCallApply": true,
+    "emitDeclarationOnly": true,
+    "jsx": "react-jsx",
+    "jsxImportSource": "@satorijs/element",
+    "types": ["node", "yml-register/types"]
   },
   "include": [
     "src",
