--- a/package.json
+++ b/package.json
@@ -58,9 +58,11 @@
     "@koishijs/plugin-console": "^5.28.2",
     "@types/node": "^20.12.7",
     "@types/throttle-debounce": "^5.0.2",
+    "@typescript-eslint/parser": "^8.1.1-alpha.2",
     "esbuild": "^0.20.2",
     "esbuild-register": "^3.5.0",
     "eslint": "^9.0.0",
+    "eslint-plugin-vue": "^9.27.0",
     "koishi": "^4.17.4",
     "typescript": "^5.4.5"
   },
