--- a/package.json
+++ b/package.json
@@ -50,26 +50,27 @@
     }
   },
   "peerDependencies": {
-    "koishi": "^4.17.4"
+    "koishi": "^4.17.12"
   },
   "devDependencies": {
-    "@koishijs/client": "^5.28.2",
+    "@koishijs/client": "^5.29.3",
     "@koishijs/eslint-config": "^1.0.4",
-    "@koishijs/plugin-console": "^5.28.2",
-    "@types/node": "^20.12.7",
+    "@koishijs/plugin-console": "^5.29.3",
+    "@types/node": "^20.14.15",
     "@types/throttle-debounce": "^5.0.2",
-    "@typescript-eslint/parser": "^8.1.1-alpha.2",
+    "@typescript-eslint/parser": "^8.1.1-alpha.5",
     "esbuild": "^0.20.2",
-    "esbuild-register": "^3.5.0",
-    "eslint": "^8.57.0",
+    "esbuild-register": "^3.6.0",
+    "eslint": "^9.0.0",
     "eslint-plugin-vue": "^9.27.0",
-    "koishi": "^4.17.4",
-    "typescript": "^5.4.5"
+    "koishi": "^4.17.12",
+    "typescript": "^5.6.0-dev.20240815",
+    "yml-register": "^1.2.5"
   },
   "dependencies": {
-    "@koishijs/console": "^5.28.2",
+    "@koishijs/console": "^5.29.3",
     "chokidar": "^3.6.0",
     "sanitize-filename": "^1.6.3",
-    "throttle-debounce": "^5.0.0"
+    "throttle-debounce": "^5.0.2"
   }
 }
