--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
       "en": "Font Manager for Koishi",
       "zh": "适用于 Koishi 的字体管理器"
     },
+    "implements": [
+      "fonts"
+    ],
     "services": {
       "required": [
         "database"
@@ -53,25 +56,25 @@
     }
   },
   "peerDependencies": {
-    "koishi": "^4.17.12"
+    "koishi": "^4.18.7"
   },
   "devDependencies": {
-    "@haixee/eslint-config": "^2.1.9",
-    "@koishijs/client": "^5.29.3",
-    "@koishijs/plugin-console": "^5.29.3",
-    "@types/node": "^20.14.15",
+    "@haixee/eslint-config": "^2.1.11",
+    "@koishijs/client": "^5.30.7",
+    "@koishijs/plugin-console": "^5.30.7",
+    "@types/node": "^20.17.24",
     "@types/throttle-debounce": "^5.0.2",
-    "@typescript-eslint/parser": "^8.1.1-alpha.5",
+    "@typescript-eslint/parser": "^8.26.2-alpha.9",
     "esbuild": "^0.20.2",
     "esbuild-register": "^3.6.0",
-    "eslint": "^9.0.0",
-    "eslint-plugin-vue": "^9.27.0",
-    "koishi": "^4.17.12",
-    "typescript": "^5.6.0-dev.20240815",
+    "eslint": "^9.22.0",
+    "eslint-plugin-vue": "^9.33.0",
+    "koishi": "^4.18.7",
+    "typescript": "^5.9.0-dev.20250319",
     "yml-register": "^1.2.5"
   },
   "dependencies": {
-    "@koishijs/console": "^5.29.3",
+    "@koishijs/console": "^5.30.7",
     "chokidar": "^3.6.0",
     "sanitize-filename": "^1.6.3",
     "throttle-debounce": "^5.0.2"
