feat: create page with fonts

--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     ],
     "services": {
       "required": [
-        "database"
+        "database",
+        "puppeteer"
       ],
       "optional": [
         "console"
