--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "eslint": "^9.22.0",
     "eslint-plugin-vue": "^9.33.0",
     "koishi": "^4.18.7",
+    "koishi-plugin-puppeteer": "^3.9.0",
     "typescript": "^5.9.0-dev.20250319",
     "yml-register": "^1.2.5"
   },
