--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,34 +3,15 @@ name: Build
 on:
   push:
   pull_request:
+    branches: [main]
+    types: [opened, synchronize, reopened, labeled, unlabeled]
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Check out
-        uses: actions/checkout@v3
-      - name: Set up Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20
-      - name: Install
-        run: yarn
-      - name: Lint
-        run: yarn lint
-
   build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Check out
-        uses: actions/checkout@v3
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20
-      - name: Install
-        run: yarn
-      - name: Build
-        run: yarn build
+    uses: cordiverse/workflows/.github/workflows/build.yml@main
+    permissions:
+      pull-requests: write
+      issues: write
+    with:
+      lint: true
+      test: false
