chore: bump version to 0.0.1 and add preview flag

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koishi-plugin-fonts",
   "description": "Font Manager for Koishi",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
@@ -43,6 +43,7 @@
       "en": "Font Manager for Koishi",
       "zh": "适用于 Koishi 的字体管理器"
     },
+    "preview": true,
     "implements": [
       "fonts"
     ],
