--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.2",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
+  "type": "module",
   "files": [
     "lib",
     "dist"
@@ -23,7 +24,10 @@
   ],
   "scripts": {
     "build": "tsc -b && koishi-console build",
-    "lint": "eslint . --quiet"
+    "lint": "eslint . --quiet",
+    "docs:dev": "vitepress dev docs --open",
+    "docs:build": "vitepress build docs",
+    "docs:serve": "vitepress serve docs"
   },
   "license": "MIT",
   "repository": {
@@ -65,6 +69,7 @@
     "koishi": "^4.18.7"
   },
   "devDependencies": {
+    "@cordisjs/vitepress": "^4.1.3",
     "@haixee/eslint-config": "^2.1.11",
     "@koishijs/client": "^5.30.7",
     "@koishijs/plugin-console": "^5.30.7",
@@ -76,6 +81,7 @@
     "eslint-plugin-vue": "^9.33.0",
     "koishi": "^4.18.7",
     "typescript": "^5.9.0-dev.20250403",
+    "vitepress": "^1.6.3",
     "yml-register": "^1.2.5"
   },
   "dependencies": {
