fix: use yakumo when building and add lock file

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,10 @@ tsconfig.cjs.tsbuildinfo
 *.ntvs*
 *.njsproj
 *.sln
+
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
