--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "Shigma <shigma10826@gmail.com>"
   ],
   "scripts": {
-    "build": "tsc -b && tsc -p tsconfig.cjs.json && koishi-console build",
+    "build": "yakumo build && koishi-console build",
+    "bump": "yakumo version",
+    "dep": "yakumo upgrade",
+    "pub": "yakumo publish",
     "lint": "eslint . --quiet",
     "docs:dev": "vitepress dev docs --open",
     "docs:build": "vitepress build docs",
@@ -91,6 +94,14 @@
     "koishi": "^4.18.7",
     "typescript": "^5.9.0-dev.20250403",
     "vitepress": "^1.6.3",
+    "yakumo": "^1.0.0",
+    "yakumo-esbuild": "^1.0.0",
+    "yakumo-esbuild-yaml": "^0.3.1",
+    "yakumo-publish": "^0.3.10",
+    "yakumo-publish-sync": "^1.0.0-alpha.1",
+    "yakumo-tsc": "^1.0.0",
+    "yakumo-upgrade": "^0.3.6",
+    "yakumo-version": "^0.3.4",
     "yml-register": "^1.2.5"
   },
   "dependencies": {
